# LLVM-IR-CAII

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  HANDOFF.md  README.md
docs/: ARCHITECTURE.md  TESTING.md
examples/: hello_rtems.c  task.c
include/: CacheConfig.hpp
include/caii/: AnalysisPass.hpp  IRLoader.h
scripts/: analyze.sh  build.sh  compile-to-ir.sh  env.sh
src/: IRLoader.cpp  PluginEntry.cpp  main.cpp
src/passes/: NullDerefChecker.cpp  RTEMSAPIChecker.cpp  StackUsageAnalyzer.cpp
tests/: CMakeLists.txt
tests/unit/: CacheConfigTest.cpp  IRLoaderTest.cpp
